changes database and controller
