# app/Http/Controllers/Api/v1/PostController.php
@@ -2,18 +2,11 @@
 
 namespace App\Http\Controllers\Api\v1;
 
-use App\Models\Post_Tag;
-use App\Models\subcategory;
-use App\Models\Tag;
-use Google\Cloud\Core\ExponentialBackoff;
-use Google\Cloud\Core\Timestamp;
-use Illuminate\Support\Facades\Validator;
-use Kreait\Firebase\Factory;
-use Kreait\Firebase\ServiceAccount;
-use Kreait\Firebase\Storage;
 use Illuminate\Http\Request;
 use App\Http\Controllers\Controller;
 use App\Models\Post; // Import model Post
+use App\Models\post_history;
+use App\Models\user_activity;
 
 class PostController extends Controller
 {
@@ -26,7 +19,7 @@ class PostController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/v1/posts",
+     *     path="/api/v1/post",
      *     summary="Lấy danh sách bài viết",
      *     operationId="getPosts",
      *     tags={"Posts"},
@@ -35,16 +28,15 @@ class PostController extends Controller
      */
     public function index()
     {
-        $posts = Post::select('posts.id','title','content', 'categories.name as category_name', 'subcategories.name as subcategory_name', 'serial_number', 'Issuance_date', 'posts.created_at', 'posts.updated_at', 'images','status')
-        ->join('subcategories', 'posts.subcategory_id', '=', 'subcategories.id')
-        ->join('categories', 'subcategories.category_id', '=', 'categories.id')
+        $posts = Post::select('posts.id','title','content', 'categories.name as category_name',  'serial_number', 'Issuance_date', 'posts.created_at', 'posts.updated_at', 'images', 'posts.status')
+        ->join('categories', 'posts.category_id', '=', 'categories.id')
         ->get();
 
         return response()->json(['message' => 'success', 'data' => $posts], 200);
     }
     /**
      * @OA\Post(
-     *     path="/api/v1/posts",
+     *     path="/api/v1/post",
      *     summary="Tạo bài viết mới",
      *     operationId="createPost",
      *     tags={"Posts"},
@@ -84,13 +76,18 @@ class PostController extends Controller
         $post->user_id = $request->input('user_id');
 
         $post->save();
-
+        $userActivity = new user_activity();
+        $userActivity->user_id = $request->input('user_id');
+        $userActivity->activity = 'created';
+        $userActivity->activity_type = 'post';
+        $userActivity->activity_id = $post->id;
+        $userActivity->save();
 
         return response()->json(['message' => 'success', 'post' => $post], 201);
     }
     /**
      * @OA\Get(
-     *     path="/api/v1/posts/{id}",
+     *     path="/api/v1/post/{id}",
      *     summary="Lấy thông tin bài viết",
      *     operationId="getPost",
      *     tags={"Posts"},
@@ -107,17 +104,20 @@ class PostController extends Controller
      */
     public function show(string $id)
     {
-        $post = Post::find($id);
-
-        if (!$post) {
-            return response()->json(['message' => 'notFound'], 404);
+        $posts = Post::select('posts.id', 'title', 'content', 'categories.name as category_name', 'serial_number', 'Issuance_date', 'posts.created_at', 'posts.updated_at', 'images', 'status')
+        ->join('categories', 'posts.category_id', '=', 'categories.id')
+        ->where('categories.id', $id)
+            ->get();
+        if (!$posts) {
+            return response()->json(['message' => 'error'], 404);
         }
-        return response()->json(['message'=>'success','post' => $post], 200);
+
+        return response()->json(['message' => 'success', 'data' => $posts], 200);
     }
 
     /**
      * @OA\Put(
-     *     path="/api/v1/posts/{id}",
+     *     path="/api/v1/post/{id}",
      *     summary="Cập nhật bài viết",
      *     operationId="updatePost",
      *     tags={"Posts"},
@@ -166,12 +166,28 @@ class PostController extends Controller
         $post->subcategory_id = $request->input('subcategory_id');
         $post->user_id = $request->input('user_id');
         $post->save();
+        $previousData = $post->toArray();
+        $userActivity = new user_activity();
+        $userActivity->user_id = $request->input('user_id');
+        $userActivity->activity = 'updated';
+        $userActivity->activity_type = 'post';
+        $userActivity->activity_id = $post->id;
+        $userActivity->save();
 
-        return response()->json(['message' => 'Bài viết đã được cập nhật!', 'post' => $post], 200);
+        // Lưu lịch sử bài viết
+        $postHistory = new post_history();
+        $postHistory->post_id = $post->id;
+        $postHistory->user_id = $request->input('user_id');
+        $postHistory->previous_data = json_encode($previousData);
+        $postHistory->updated_data = json_encode($post->toArray());
+        $postHistory->save();
+
+        return response()->json(['message' => 'success', 'post' => $post], 200);
+
     }
     /**
      * @OA\Delete(
-     *     path="/api/v1/posts/{id}",
+     *     path="/api/v1/post/{id}",
      *     summary="Xóa bài viết",
      *     operationId="deletePost",
      *     tags={"Posts"},
@@ -186,13 +202,27 @@ class PostController extends Controller
      *     @OA\Response(response=404, description="Không tìm thấy bài viết"),
      * )
      */
-    public function destroy(string $id)
+    public function destroy($id)
     {
         $post = Post::find($id);
 
         if (!$post) {
             return response()->json(['message' => 'error'], 404);
         }
+        $postHistory = new post_history();
+        $postHistory->post_id = $post->id;
+        $postHistory->user_id = $post->user_id;
+        $postHistory->previous_data = json_encode($post->toArray());
+        $postHistory->deleted_at = now();
+        $postHistory->save();
+
+        // Ghi lịch sử hoạt động của người dùng
+        $userActivity = new user_activity();
+        $userActivity->user_id = $post->user_id;
+        $userActivity->activity = 'deleted';
+        $userActivity->activity_type = 'post';
+        $userActivity->activity_id = $post->id;
+        $userActivity->save();
 
         $post->delete();
 
