# app/Http/Controllers/Api/v1/UpdateStatusController.php
@@ -4,8 +4,9 @@ namespace App\Http\Controllers\Api\v1;
 
 use App\Http\Controllers\Controller;
 use App\Models\Post;
-use App\Models\subcategory;
+use App\Models\post_history;
 use App\Models\User;
+use App\Models\user_activity;
 use Illuminate\Http\Request;
 
 class UpdateStatusController extends Controller
@@ -33,12 +34,14 @@ class UpdateStatusController extends Controller
      *     @OA\Response(response=404, description="Không tìm thấy người dùng"),
      * )
      */
-    public function userStatus(Request $request){
+    public function userStatus(Request $request)
+    {
         $user = User::find($request->id);
 
         if (!$user) {
             return response()->json(['message' => 'Không tìm thấy người dùng'], 404);
         }
+
         if ($user->status === 'active') {
             $user->status = 'inactive';
         } else {
@@ -49,20 +52,51 @@ class UpdateStatusController extends Controller
 
         return response()->json(['message' => 'success']);
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/update-status/post",
+     *     summary="Cập nhật trạng thái của bài viết (active/inactive)",
+     *     operationId="updatePostStatus",
+     *     tags={"User Status"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="id", type="integer"),
+     *         )
+     *     ),
+     *     @OA\Response(response=200, description="Trạng thái bài viết đã được cập nhật"),
+     *     @OA\Response(response=404, description="Không tìm thấy bài viết"),
+     * )
+     */
     public function postStatus(Request $request)
     {
-        $Post = Post::find($request->id);
+        $post = Post::find($request->id);
 
-        if (!$Post) {
-            return response()->json(['message' => 'Không tìm thấy người dùng'], 404);
+        if (!$post) {
+            return response()->json(['message' => 'Không tìm thấy bài viết'], 404);
         }
-        if ($Post->status === 'active') {
-            $Post->status = 'inactive';
+
+        $oldPostData = $post->toArray();
+
+        if ($post->status === 'active') {
+            $post->status = 'inactive';
         } else {
-            $Post->status = 'active';
+            $post->status = 'active';
         }
 
-        $Post->save();
+        $post->save();
+
+        post_history::create([
+            'post_id' => $post->id,
+            'old_data' => json_encode($oldPostData),
+            'new_data' => json_encode($post->toArray()),
+        ]);
+        user_activity::create([
+            'user_id' => $post->user_id,
+            'activity' => 'Updated post status',
+            'description' => 'Updated post status to ' . $post->status,
+        ]);
 
         return response()->json(['message' => 'success']);
     }
